# atrax_backend

./: .gitignore  Dockerfile  README.md  env.sample  main.py  pyproject.toml  requirements.txt
alembic/versions/: 39c38b78c51c_initial.py  e71650ffc0d1_initial.py
app/: config.py  crud.py  models.py  router.py  schemas.py  service.py  tasks.py
app/tests/: conftest.py  test_00_crud.py  test_01_api.py  test_crud.py
